# py-sw

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: swapi_client.py
app/models/: schemas.py
app/modules/films/: router.py  schema.py  service.py
app/modules/people/: router.py  schema.py  service.py
app/modules/planets/: router.py  schema.py  service.py
app/modules/species/: router.py  schema.py  service.py
app/modules/starships/: router.py  schema.py  service.py
app/modules/swapi/: router.py
app/modules/vehicles/: router.py  schema.py  service.py
app/routers/: people.py
app/services/: swapi_client.py
tests/: test_health.py
tests/factories/: pagination.py
tests/films/: factories.py  test_service.py
tests/people/: factories.py  test_router.py  test_service.py
tests/planets/: factories.py  test_service.py
tests/species/: factories.py  test_service.py
tests/starships/: factories.py  test_service.py
tests/swapi/: test_swapi_generic.py
tests/vehicles/: factories.py  test_service.py
