[project]
name = "py-sw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "line-too-long",
]